operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-tls-passthrough/output/cec-multi-port-tls-passthrough.yaml
metadata:
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: multi-port-tls-passthrough
  name: cilium-gateway-multi-port-tls-passthrough
  namespace: gateway-conformance-infra
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      controller: true
      kind: Gateway
      name: multi-port-tls-passthrough
      uid: ""
  resourceVersion: "1"
spec:
  backendServices:
    - name: tls-backend
      namespace: gateway-conformance-infra
      number:
        - "443"
    - name: tls-backend-2
      namespace: gateway-conformance-infra
      number:
        - "443"
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            serverNames:
              - tls.example.test
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.tcp_proxy
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                cluster: gateway-conformance-infra:tls-backend:443
                statPrefix: tls-passthrough:tls.example.test
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener-443
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            serverNames:
              - tls.example.test
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.tcp_proxy
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                cluster: gateway-conformance-infra:tls-backend-2:443
                statPrefix: tls-passthrough:tls.example.test
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener-9443
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: listener-insecure
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/tls-backend-2:443
      name: gateway-conformance-infra:tls-backend-2:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      type: EDS
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/tls-backend:443
      name: gateway-conformance-infra:tls-backend:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      type: EDS
  services:
    - listener: listener-443
      name: cilium-gateway-multi-port-tls-passthrough
      namespace: gateway-conformance-infra
      ports:
        - 443
    - listener: listener-9443
      name: cilium-gateway-multi-port-tls-passthrough
      namespace: gateway-conformance-infra
      ports:
        - 9443
